@@ -2,6 +2,8 @@ Version 0.4.1     unreleased
 
 	* Pull in latest version of run-script-framework.
 	* Migrate from Poetry to UV for the Python build system.
+	* Add support for Python v3.14 and drop support for v3.10.
+	* Document how to change the interpreter version with `$UV_PYTHON`.
 
 Version 0.4.0     20 Sep 2025
 
